Gravity form style

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -16,3 +16,6 @@ Text Domain:	 wpcustomify
 
 // Documentation module
 @import "documentation_module";
+
+// gforms module
+@import "gforms_module";
