--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ Text Domain:	 wpcustomify
   padding: 11px;
 }
 .gforms_section .gform_wrapper textarea {
-  padding: 20px;
+  padding: 15px;
 }
 .gforms_section .gform_wrapper.gf_browser_chrome .gfield_checkbox li input, .gforms_section .gform_wrapper.gf_browser_chrome .gfield_checkbox li input[type=checkbox], .gforms_section .gform_wrapper.gf_browser_chrome .gfield_radio li input[type=radio] {
   margin-top: 0px;
@@ -458,6 +458,12 @@ Text Domain:	 wpcustomify
   margin: 2px 0 0 7px;
 }
 .gforms_section .gform_wrapper .top_label .gfield_label {
-  font-size: 18px;
+  font-size: 19px;
+  font-weight: 500;
+}
+.gforms_section .gform_wrapper .gfield_checkbox li label, .gforms_section .gform_wrapper .gfield_radio li label {
+  font-size: inherit;
+}
+.gforms_section strong {
   font-weight: 500;
 }
