--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -14,6 +14,12 @@ Text Domain:	 wpcustomify
     Add your custom styles here
 */
 
+// Typekit
+@import "typography";
+
+// Layouts
+@import "layouts";
+
 // Documentation module
 @import "documentation_module";
 
