--- a/assets/sass/_edd.scss
+++ b/assets/sass/_edd.scss
@@ -6,10 +6,13 @@
 // My Account Page
 .page-template-edd_my_account {
     .site-content {
-        background: #fafafa;
+        //background: #fafafa;
+        #edd_user_history td, #edd_user_history th {
+            padding: 11px 20px;
+        }
     }
     #page-titlebar {
-        background: #00438b;
+        background: #254899;
         .titlebar-title {
             color: #FFF;
         }
@@ -40,7 +43,7 @@
                      border-bottom: 1px solid #eaeaea;
                      color: #6d7785;
                      &.active {
-                         color: #0cb4ce;
+                         color: #254899;
                      }
                  }
              }
@@ -61,7 +64,7 @@
         float: right;
         width: 70%;
         .account-tabs-group {
-            margin-top: -10px;
+            margin-top: -8px;
         }
     }
 }
@@ -76,6 +79,7 @@
     font-size: 18px;
     font-weight: 600;
     letter-spacing: 1px;
+    border-radius: 2px;
     &:hover {
         box-shadow: inset 0 0 0 120px rgba(0,0,0,.1);
     }
@@ -125,6 +129,27 @@
         width: 100%;
         display: block;
         padding: 10px 35px;
+    }
+}
+
+// License Table.
+.edd_sl_table {
+    .edd_sl_license_key {
+        width: 100%;
+    }
+}
+
+// Profile field
+#edd_profile_editor_form {
+    input[type=email], input[type=number], input[type=password], input[type=text], input[type=url], textarea, select {
+        display: block;
+        width: 100%;
+    }
+    label {
+        text-transform: uppercase;
+        font-size: 13px;
+        font-weight: 400;
+        letter-spacing: 1px;
     }
 }
 
