--- a/style.css
+++ b/style.css
@@ -497,24 +497,24 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3 {
 }
 
 /* EDD Style */
-.page-template-edd_my_account .site-content #edd_user_history td, .page-template-edd_my_account .site-content #edd_user_history th {
+.page-template-edd_my_account .site-content #edd_user_history td, .page-template-edd_my_account .site-content #edd_user_history th, .page-id-831 .site-content #edd_user_history td, .page-id-831 .site-content #edd_user_history th {
   padding: 11px 20px;
 }
-.page-template-edd_my_account #page-titlebar {
+.page-template-edd_my_account #page-titlebar, .page-id-831 #page-titlebar {
   background: #254899;
 }
-.page-template-edd_my_account #page-titlebar .titlebar-title {
+.page-template-edd_my_account #page-titlebar .titlebar-title, .page-id-831 #page-titlebar .titlebar-title {
   color: #FFF;
 }
-.page-template-edd_my_account #page-titlebar .titlebar-tagline {
+.page-template-edd_my_account #page-titlebar .titlebar-tagline, .page-id-831 #page-titlebar .titlebar-tagline {
   color: rgba(255, 255, 255, 0.72);
 }
-.page-template-edd_my_account #main, .page-template-edd_my_account #sidebar-primary, .page-template-edd_my_account #sidebar-secondary {
+.page-template-edd_my_account #main, .page-template-edd_my_account #sidebar-primary, .page-template-edd_my_account #sidebar-secondary, .page-id-831 #main, .page-id-831 #sidebar-primary, .page-id-831 #sidebar-secondary {
   padding-top: 80px;
   padding-bottom: 80px;
 }
 @media screen and (max-width: 1024px) {
-  .page-template-edd_my_account #main, .page-template-edd_my_account #sidebar-primary, .page-template-edd_my_account #sidebar-secondary {
+  .page-template-edd_my_account #main, .page-template-edd_my_account #sidebar-primary, .page-template-edd_my_account #sidebar-secondary, .page-id-831 #main, .page-id-831 #sidebar-primary, .page-id-831 #sidebar-secondary {
     padding-top: 50px;
     padding-bottom: 50px;
   }
@@ -553,6 +553,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3 {
 .my-account-wrapper .my-account-main .account-tabs-group {
   margin-top: -8px;
 }
+.my-account-wrapper.no-sidebar .my-account-main {
+  float: none;
+  width: 100%;
+}
 
 #edd-purchase-button, .edd-submit, input[type="submit"].edd-submit {
   border: none;
@@ -566,6 +570,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3 {
 }
 #edd-purchase-button:hover, .edd-submit:hover, input[type="submit"].edd-submit:hover {
   box-shadow: inset 0 0 0 120px rgba(0, 0, 0, 0.1);
+}
+
+button.edd-button.edd-stripe-add-new, button.edd-stripe-submit-update {
+  color: #FFF;
+  border-radius: 2px;
+  line-height: 1;
 }
 
 .edd-login-wrapper {
@@ -629,4 +639,79 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3 {
   font-size: 13px;
   font-weight: 400;
   letter-spacing: 1px;
+}
+
+#edd_sl_license_add_site_form span {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.page-id-831 .site-content .customify-container {
+  max-width: 800px;
+}
+
+#edd_checkout_form_wrap legend {
+  display: inline-block;
+  float: left;
+  font-weight: 400;
+  font-size: 23px;
+}
+
+#edd_checkout_form_wrap .edd-payment-icons {
+  margin-bottom: 20px;
+}
+
+#edd_checkout_form_wrap #edd_final_total_wrap {
+  background: transparent;
+  border: none;
+  text-align: center;
+  font-size: 23px;
+}
+
+#edd_purchase_submit .edd-submit {
+  width: 100%;
+  padding: 17px 35px;
+  font-size: 21px;
+}
+
+.edd_cart_remove_item_btn {
+  color: #999999;
+}
+.edd_cart_remove_item_btn:hover {
+  text-decoration: underline;
+}
+
+#edd_checkout_form_wrap fieldset#edd_cc_fields {
+  background: #fff;
+}
+
+#edd_checkout_form_wrap input[type=email],
+#edd_checkout_form_wrap input[type=password],
+#edd_checkout_form_wrap input[type=tel],
+#edd_checkout_form_wrap input[type=text],
+#edd_checkout_form_wrap .edd-select,
+#edd_checkout_form_wrap textarea {
+  width: 100%;
+  padding: 8px 10px;
+}
+
+#edd_checkout_form_wrap .edd-discount-code-field-wrap .edd-input {
+  width: auto;
+}
+#edd_checkout_form_wrap .edd-discount-code-field-wrap input.edd-submit {
+  padding: 8.5px 15px;
+  margin-left: 5px;
+}
+
+#edd_checkout_form_wrap label {
+  font-weight: 400;
+}
+
+#edd_checkout_cart th {
+  font-weight: 600;
+}
+
+#edd_checkout_form_wrap #edd-payment-mode-wrap input[type=radio] {
+  position: relative;
+  top: -1px;
 }
