Update license input style.

--- a/assets/sass/_edd.scss
+++ b/assets/sass/_edd.scss
@@ -72,6 +72,9 @@
         float: none;
         width: 100%;
     }
+    .edd_sl_license_row input.edd_sl_license_key {
+        padding: 10px 15px;
+    }
 }
 
 
